refactor(api) add post customer
