# handlers/company_handler.go
@@ -14,12 +14,15 @@ type CompanyHandler struct {
 	comRepository *repository.CompanyRepository
 }
 
-func NewUserHandler(comRepository *repository.CompanyRepository) *CompanyHandler {
+func NewCompanyHandler(comRepository *repository.CompanyRepository) *CompanyHandler {
 	return &CompanyHandler{comRepository}
 }
 
 // @Summary get all items in the Company list
 // @ID get-all-companies
+// @Description  Return all Companies
+// @Tags         Company
+// @Accept       json
 // @Produce json
 // @Success 200 {object} domain.Company
 // @Failure 404 {object} domain.Message
@@ -33,20 +36,15 @@ func (ch *CompanyHandler) GetCompanies(c *gin.Context) {
 	c.JSON(http.StatusOK, companies)
 }
 
-func (uh *CompanyHandler) CreateUser(c *gin.Context) {
-	var user domain.Company
-	if err := c.ShouldBindJSON(&user); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	err := uh.comRepository.Save(user)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusCreated, gin.H{"message": "User created successfully"})
-}
-
+// @Summary get item by id in the Company list
+// @ID get-company-by-id
+// @Description  Return Company by Id
+// @Tags         Company
+// @Accept       json
+// @Produce      json
+// @Success 200 {object} domain.Company
+// @Failure 404 {object} domain.Message
+// @Router /companies/{id} [get]
 func (uh *CompanyHandler) GetUserByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -61,6 +59,40 @@ func (uh *CompanyHandler) GetUserByID(c *gin.Context) {
 	c.JSON(http.StatusOK, user)
 }
 
+// @Summary create a company item
+// @ID create-company
+// @Description  Create a Company
+// @Tags         Company
+// @Accept       json
+// @Produce json
+// @Param company body domain.Company true "Company item"
+// @Success 201 {object} domain.Company
+// @Failure 400 {object} domain.Message
+// @Router /companies [post]
+func (uh *CompanyHandler) CreateUser(c *gin.Context) {
+	var user domain.Company
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	err := uh.comRepository.Save(user)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusCreated, gin.H{"message": "User created successfully"})
+}
+
+// @Summary create a company item
+// @ID create-company
+// @Description  Update a Company
+// @Tags         Company
+// @Accept       json
+// @Produce json
+// @Param company body domain.Company true "Company item"
+// @Success 201 {object} domain.Company
+// @Failure 400 {object} domain.Message
+// @Router /companies [post]
 func (uh *CompanyHandler) UpdateUser(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -82,9 +114,11 @@ func (uh *CompanyHandler) UpdateUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"message": "User updated successfully"})
 }
 
-
 // @Summary delete a company item by ID
 // @ID delete-company-by-id
+// @Description  Delete a Company
+// @Tags         Company
+// @Accept       json
 // @Produce json
 // @Param id path string true "company ID"
 // @Success 200 {object} domain.Company
@@ -103,7 +137,7 @@ func (uh *CompanyHandler) DeleteUser(c *gin.Context) {
 	}
 
 	// return error message if todo is not found
-	//var message domain.Message 
+	//var message domain.Message
 
 	r := domain.Message{"User deleted successfully"}
 
